--- a/project_semester/references.bib
+++ b/project_semester/references.bib
@@ -19,6 +19,15 @@
   isbn = {0-262-51081-2}
 }
 
+@misc{atlassianManageYourTeam,
+  title = {Manage {{Your Team}}'s {{Projects From Anywhere}} | {{Trello}}},
+  author = {Atlassian},
+  urldate = {2023-03-23},
+  abstract = {Simple, flexible, and powerful. All it takes are boards, lists, and cards to get a clear view of who's doing what and what needs to get done. Learn more in our guide for getting started.},
+  howpublished = {\url{https://trello.com/}},
+  file = {/Users/macbook/Zotero/storage/BMXCUJZL/trello.com.html}
+}
+
 @misc{beersWhatRegressionDefinition,
   title = {What Is {{Regression}}? {{Definition}}, {{Calculation}}, and {{Example}}},
   shorttitle = {What Is {{Regression}}?},
@@ -114,6 +123,19 @@
   pages = {38--48},
   publisher = {{Elsevier}},
   issn = {0925-2312}
+}
+
+@misc{dockerDockerDocumentationOverview2023,
+  title = {Docker {{Documentation Overview}}},
+  author = {Docker},
+  year = {2023},
+  month = mar,
+  journal = {Docker Documentation},
+  urldate = {2023-03-28},
+  abstract = {Get started with the Docker basics in this comprehensive overview, You'll learn about containers, images, and how to containerize your first application.},
+  howpublished = {\url{https://docs.docker.com/get-started/}},
+  langid = {english},
+  file = {/Users/macbook/Zotero/storage/HPFPMSJI/get-started.html}
 }
 
 @inproceedings{doerrAdaptiveSchedulingRealtime1999,
@@ -308,6 +330,17 @@
   issn = {0034-4885}
 }
 
+@misc{jetbrainsWhatAreDomainSpecific,
+  title = {What Are {{Domain-Specific Languages}} ({{DSL}}) | {{MPS}} by {{JetBrains}}},
+  author = {JetBrains},
+  journal = {JetBrains},
+  urldate = {2023-03-24},
+  abstract = {The major goal of MPS is to allow extending programming languages.},
+  howpublished = {\url{https://www.jetbrains.com/mps/concepts/domain-specific-languages/}},
+  langid = {english},
+  file = {/Users/macbook/Zotero/storage/PIK4XCDH/domain-specific-languages.html}
+}
+
 @article{jiangEdgeEnhancedGANRemote2019,
   title = {Edge-{{Enhanced GAN}} for {{Remote Sensing Image Superresolution}}},
   author = {Jiang, Kui and Wang, Zhongyuan and Yi, Peng and Wang, Guangcheng and Lu, Tao and Jiang, Junjun},
@@ -367,6 +400,15 @@
   howpublished = {\url{https://docs.insomnia.rest/insomnia/get-started}},
   langid = {american},
   file = {/Users/macbook/Zotero/storage/4MPEU3LL/docs.insomnia.rest.html}
+}
+
+@misc{konginc.UnitTestingInsomnia,
+  title = {Unit {{Testing}} | {{Insomnia Docs}}},
+  author = {Kong Inc.},
+  urldate = {2023-03-23},
+  howpublished = {\url{https://docs.insomnia.rest/insomnia/unit-testing}},
+  langid = {american},
+  file = {/Users/macbook/Zotero/storage/JAK7RWCL/unit-testing.html}
 }
 
 @article{kotsiantisDecisionTreesRecent2013,
@@ -450,6 +492,16 @@
   pages = {58--70},
   publisher = {{IEEE}},
   isbn = {1-66549-856-0}
+}
+
+@misc{microsoftSkypeStayConnected,
+  title = {Skype | {{Stay}} Connected with Free Video Calls Worldwide},
+  author = {Microsoft},
+  urldate = {2023-03-23},
+  abstract = {Keep in touch with free video chat, messaging \& affordable international calls. Create instant\,online\,video calls\,with one click, no download required.},
+  howpublished = {\url{https://www.skype.com/en/}},
+  langid = {english},
+  file = {/Users/macbook/Zotero/storage/CYWV3YNL/en.html}
 }
 
 @misc{mitrovicDEFPIPEFrontend2022,
@@ -672,6 +724,17 @@
   file = {/Users/macbook/Zotero/storage/Y49R6P67/Stoop and Wiers - 1996 - The complexity of scheduling in practice.pdf}
 }
 
+@misc{the-linux-foundationKubernetesDocumentationGetting,
+  title = {Kubernetes {{Documentation}} / {{Getting}} Started},
+  author = {{The-Linux-Foundation} and Kubernetes},
+  journal = {Kubernetes},
+  urldate = {2023-03-28},
+  abstract = {Production-Grade Container Orchestration},
+  howpublished = {\url{https://kubernetes.io/docs/setup/}},
+  langid = {english},
+  file = {/Users/macbook/Zotero/storage/IYAW4RUK/setup.html}
+}
+
 @misc{the-linux-foundationPyTorch,
   title = {{{PyTorch}}},
   author = {{The-Linux-Foundation}},
@@ -722,6 +785,19 @@
   issn = {1939-1374}
 }
 
+@misc{wattsWhatCodeRefactoring2018,
+  title = {What Is {{Code Refactoring}}? {{How Refactoring Resolves Technical Debt}}},
+  shorttitle = {What Is {{Code Refactoring}}?},
+  author = {Watts, Stephen and Kidd, Chrissy},
+  year = {2018},
+  month = mar,
+  journal = {BMC Blogs},
+  urldate = {2023-03-23},
+  howpublished = {\url{https://www.bmc.com/blogs/code-refactoring-explained/}},
+  langid = {american},
+  file = {/Users/macbook/Zotero/storage/GUALET3P/code-refactoring-explained.html}
+}
+
 @book{weisbergAppliedLinearRegression2005,
   title = {Applied Linear Regression},
   author = {Weisberg, Sanford},
@@ -737,6 +813,27 @@
   urldate = {2023-03-21},
   howpublished = {\url{https://flask.palletsprojects.com/en/2.2.x/}},
   file = {/Users/macbook/Zotero/storage/6FG9BWRK/2.2.x.html}
+}
+
+@misc{wengAlibabaClusterTrace2023,
+  title = {Alibaba {{Cluster Trace Program}}},
+  author = {Weng, Qizhen and Ding, Haiyang},
+  year = {2023},
+  month = apr,
+  urldate = {2023-04-08},
+  abstract = {cluster data collected from production clusters in Alibaba for cluster management research},
+  howpublished = {Alibaba},
+  keywords = {dataset},
+  note = {\url{https://github.com/alibaba/clusterdata}}
+}
+
+@misc{wengClusterdataClustertracegpuv2020Master,
+  title = {Clusterdata/Cluster-Trace-Gpu-V2020 at Master {$\cdot$} Alibaba/Clusterdata},
+  author = {Weng, Qizhen and Xiao, Wencong and Yu, Yinghao and Wang, Wei and Wang, Cheng and He, Jian},
+  journal = {Cluster Trace GPU v2020},
+  urldate = {2023-04-08},
+  howpublished = {\url{https://github.com/alibaba/clusterdata/tree/master/cluster-trace-gpu-v2020}},
+  file = {/Users/macbook/Zotero/storage/P8XBGU66/cluster-trace-gpu-v2020.html}
 }
 
 @article{wengMLaaSWildWorkload,
@@ -762,6 +859,14 @@
   abstract = {With the sustained technological advances in machine learning (ML) and the availability of massive datasets recently, tech companies are deploying large ML-as-a-Service (MLaaS) clouds, often with heterogeneous GPUs, to provision a host of ML applications. However, running diverse ML workloads in heterogeneous GPU clusters raises a number of challenges. In this paper, we present a characterization study of a two-month workload trace collected from a production MLaaS cluster with over 6,000 GPUs in Alibaba. We explain the challenges posed to cluster scheduling, including the low GPU utilization, the long queueing delays, the presence of hard-to-schedule tasks demanding high-end GPUs with picky scheduling requirements, the imbalance load across heterogeneous machines, and the potential bottleneck on CPUs. We describe our current solutions and call for further investigations into the challenges that remain open to address. We have released the trace for public access, which is the most comprehensive in terms of the workloads and cluster scale.},
   langid = {english},
   file = {/Users/macbook/Zotero/storage/UP3L2IMI/Weng et al. - MLaaS in the Wild Workload Analysis and Schedulin.pdf}
+}
+
+@article{wengMLaaSWildWorkloadb,
+  title = {{{MLaaS}} in the {{Wild}}: {{Workload Analysis}} and {{Scheduling}} in {{Large-Scale Heterogeneous GPU Clusters}}},
+  author = {Weng, Qizhen and Xiao, Wencong and Yu, Yinghao and Wang, Wei and Wang, Cheng and He, Jian and Li, Yong and Zhang, Liping and Lin, Wei and Ding, Yu},
+  abstract = {With the sustained technological advances in machine learning (ML) and the availability of massive datasets recently, tech companies are deploying large ML-as-a-Service (MLaaS) clouds, often with heterogeneous GPUs, to provision a host of ML applications. However, running diverse ML workloads in heterogeneous GPU clusters raises a number of challenges. In this paper, we present a characterization study of a two-month workload trace collected from a production MLaaS cluster with over 6,000 GPUs in Alibaba. We explain the challenges posed to cluster scheduling, including the low GPU utilization, the long queueing delays, the presence of hard-to-schedule tasks demanding high-end GPUs with picky scheduling requirements, the imbalance load across heterogeneous machines, and the potential bottleneck on CPUs. We describe our current solutions and call for further investigations into the challenges that remain open to address. We have released the trace for public access, which is the most comprehensive in terms of the workloads and cluster scale.},
+  langid = {english},
+  file = {/Users/macbook/Zotero/storage/2WHGMU7Z/Weng et al. - MLaaS in the Wild Workload Analysis and Schedulin.pdf}
 }
 
 @misc{zhangArchitecturalComplexityMeasures2016,
