Added multiple jupyter notebooks that are used

--- a/cluster-trace-gpu-v2020/prediction/evaluation/task_vs_no_task/task_evaluation.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/evaluation/task_vs_no_task/task_evaluation.ipynb
@@ -80,17 +80,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_wastage_difference(df: pd.DataFrame, allocated_col: int, predicted_col: int) -> float:\n",
+    "def calculate_wastage_difference(df: pd.DataFrame, predicted_col: int, allocated_col: int) -> float:\n",
     "    alloc = prepare_wastage_series(df, allocated_col)\n",
     "    pred = prepare_wastage_series(df, predicted_col)\n",
     "    \n",
-    "    print(alloc.mean(), pred.mean())\n",
-    "    \n",
-    "    return round(((pred.mean() / alloc.mean())), 3)"
+    "    return round(1 - ((pred.mean() / alloc.mean())), 3)"
    ]
   },
   {
@@ -213,34 +211,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "387.0570937202583 231.32951034323068\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.598"
+       "0.402"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calculate_wastage_difference(test_df, 2, 1)"
+    "calculate_wastage_difference(test_df, 1, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +240,7 @@
        "0.4023374998252278"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2317,7 +2308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:52:10) \n[Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
