--- a/cluster-trace-gpu-v2020/prediction/lstm_utilization_prediction.ipynb
+++ b/cluster-trace-gpu-v2020/prediction/lstm_utilization_prediction.ipynb
@@ -1904,7 +1904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Jun  1 2022, 06:34:44) \n[Clang 12.0.0 ]"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
